* TODO: review cookie handling. Not always sent automatically. 
* TODO: review :variables in URI elements
* TODO: global responses
* TODO: request block conditions. 
* TODO: process templates for calls to set in get blocks


#### 0.8.3 (2010-03-??) ###############################

* FIXED: Testrun digest handling
* FIXED: Testrun.id will be converted to a Gibbler::Digest if it's a String. 
* CHANGE: Removed dashes from CLI params: notemplate, nostats, nowait, withheader, withparam
* CHANGE: Engine is now called via Testrun#run
* CHANGE: Use the ID attribute (e.g. Testplan.id) instead of digest or digest_cache (which only
  be used once to generate an ID 
* ADDED: Testrun#client_options
* ADDED: Reconstituting Stella::Testrun and Stella::Testplan objects from JSON/Hash
* ADDED: Testrun objects are now frozen after the run
* ADDED: Testrun#userid, Testrun#runinfo
* ADDED: Default Testrun status is "new"


#### 0.8.2 (2010-03-05) ###############################

* FIXED: Misc issues with usage via module (Stella::Engine.load)
* FIXED: ANSI code method stubs only created when Drydock not available
* CHANGE: Remove all logs except summary and exceptions
* CHANGE: Renamed .stella/logs/latest/request-exceptions to .stella/logs/latest/exceptions
* CHANGE: Removed unused Load implementations and renamed LoadQueue to Load
* CHANGE: Added proper names for statistics (response_time instead of do_request)
* CHANGE: Benelux 0.5.8 dependency
* CHANGE: Cleaned up generate mode CLI output
* CHANGE: Removed no-logging option
* CHANGE: Renamed Testrun#summary to Testrun#stats
* CHANGE: Pass entire URI when calling Testplan#new
* CHANGE: Engine objects are now classes
* CHANGE: Engine#run methods now return instance of Stella::Testrun
* ADDED: JSON statistics log (.stella/logs/latest/stats)


#### 0.8.1.002 (2010-02-20) ###############################

* FIXED: fail on connection error
* CHANGE: Remove hanna dependency